--- a/TramitesAI/TramitesAI.csproj
+++ b/TramitesAI/TramitesAI.csproj
@@ -25,17 +25,17 @@
   <ItemGroup>
     <Folder Include="AI\Domain\Dto\" />
     <Folder Include="AI\Domain\Enums\" />
-    <Folder Include="AI\Implementations\" />
     <Folder Include="AI\Services\Infrastructure\" />
     <Folder Include="AI\Services\Interfaces\" />
-    <Folder Include="AI\Services\" />
-    <Folder Include="Business\Configuration\" />
+    <Folder Include="AI\Services\Implementation\" />
+    <Folder Include="Business\Services\Implementation\" />
+    <Folder Include="Business\Services\Interfaces\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Repository\Configuration\" />
     <Folder Include="Business\Domain\Dto\" />
     <Folder Include="Business\Domain\Enums\" />
     <Folder Include="Business\Services\Infrastructure\" />
-    <Folder Include="Business\Services\Interfaces\" />
-    <Folder Include="Business\Controllers\" />
-    <Folder Include="Business\Repository\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 
 </Project>
