--- a/TramitesAI/TramitesAI.csproj
+++ b/TramitesAI/TramitesAI.csproj
@@ -8,12 +8,16 @@
 
   <ItemGroup>
     <Compile Remove="a\**" />
+    <Compile Remove="images\**" />
     <Compile Remove="Orchestrator\**" />
     <Content Remove="a\**" />
+    <Content Remove="images\**" />
     <Content Remove="Orchestrator\**" />
     <EmbeddedResource Remove="a\**" />
+    <EmbeddedResource Remove="images\**" />
     <EmbeddedResource Remove="Orchestrator\**" />
     <None Remove="a\**" />
+    <None Remove="images\**" />
     <None Remove="Orchestrator\**" />
   </ItemGroup>
 
@@ -34,7 +38,6 @@
     <Folder Include="AI\Services\Infrastructure\" />
     <Folder Include="Business\Services\Implementation\" />
     <Folder Include="Business\Services\Interfaces\" />
-    <Folder Include="images\PdfsToPng\" />
     <Folder Include="Repository\Configuration\" />
     <Folder Include="Business\Domain\Enums\" />
     <Folder Include="Business\Services\Infrastructure\" />
