--- a/TramitesAI/TramitesAI.csproj
+++ b/TramitesAI/TramitesAI.csproj
@@ -43,4 +43,20 @@
     <Folder Include="Business\Services\Infrastructure\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="C:\Users\ivand\.nuget\packages\tesseract\5.2.0\build\\..\x64\leptonica-1.82.0.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\ivand\.nuget\packages\tesseract\5.2.0\build\\..\x64\tesseract50.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\ivand\.nuget\packages\tesseract\5.2.0\build\\..\x86\leptonica-1.82.0.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\ivand\.nuget\packages\tesseract\5.2.0\build\\..\x86\tesseract50.dll" />
+  </ItemGroup>
+
 </Project>
