--- a/TramitesAI/appsettings.json
+++ b/TramitesAI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=LAPTOP-C56DTAB8\\MSSQLSERVER01;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
