--- a/TramitesAI/appsettings.json
+++ b/TramitesAI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=LAPTOP-C56DTAB8\\MSSQLSERVER01;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=ENV_VAR;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
