--- a/TramitesAI/appsettings.json
+++ b/TramitesAI/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=ENV_VAR;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DatabaseConnectionIvan": "Server=LAPTOP-C56DTAB8\\MSSQLSERVER01;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DatabaseConnectionDenise": "Server=;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DatabaseConnectionCarolina": "Server=;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DatabaseConnectionAriel": "Server=;Database=TramitesAIDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
