feat: reorganizing folders into src for all files that relate to the app and tests for all the tests

--- a/TramitesAI/TramitesAI.csproj
+++ b/TramitesAI/TramitesAI.csproj
@@ -39,13 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="AI\Domain\Enums\" />
-    <Folder Include="AI\Services\Infrastructure\" />
-    <Folder Include="Business\Services\Implementation\" />
-    <Folder Include="Business\Services\Interfaces\" />
-    <Folder Include="Repository\Configuration\" />
-    <Folder Include="Business\Domain\Enums\" />
-    <Folder Include="Business\Services\Infrastructure\" />
+    <Folder Include="Test\" />
   </ItemGroup>
 
   <ItemGroup>
