--- a/TramitesAI/TramitesAI.csproj
+++ b/TramitesAI/TramitesAI.csproj
@@ -10,15 +10,19 @@
     <Compile Remove="a\**" />
     <Compile Remove="images\**" />
     <Compile Remove="Orchestrator\**" />
+    <Compile Remove="Test\**" />
     <Content Remove="a\**" />
     <Content Remove="images\**" />
     <Content Remove="Orchestrator\**" />
+    <Content Remove="Test\**" />
     <EmbeddedResource Remove="a\**" />
     <EmbeddedResource Remove="images\**" />
     <EmbeddedResource Remove="Orchestrator\**" />
+    <EmbeddedResource Remove="Test\**" />
     <None Remove="a\**" />
     <None Remove="images\**" />
     <None Remove="Orchestrator\**" />
+    <None Remove="Test\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,10 +40,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Test\" />
   </ItemGroup>
 
   <ItemGroup>
